improve code for readability